<resources>
    <string name="app_name">Second_Task_Kotlin</string>
    <string name="menu">Menu</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="minus">_</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_details">Course Details</string>
    <string name="step_design_sprint_for_beginner">Step design sprint for beginner</string>
    <string name="_6_lessons">6 lessons</string>
    <string name="design">Design</string>
    <string name="free">Free</string>
    <string name="in_this_course_i_ll_show_the_step_by_step_day_by_day_process_to_build_better_products_just_as_google_slack_klm_and_manu_other_do">In this course I\'ll show the step by step, day by day process to build better products, just as Google, Slack, KLM and manu other do.</string>
    <string name="laurel_seilha">Laurel Seilha</string>
    <string name="product_designer">Product Designer</string>
    <string name="free_e_book">Free e-book</string>
    <string name="roger_hulg">Roger Hulg</string>
    <string name="hey_can_i_ask_something_i_need_your_help_please">Hey, can i ask something? i need your help please</string>
    <string name="search_here">Search here</string>
    <string name="upcoming_course_of_this_week">Upcoming course of this week</string>
    <string name="available_time">Available time</string>
    <string name="adjust_to_your_schedule">Adjust to your schedule</string>
    <string name="email">Email</string>
    <string name="telp_number">Telp number</string>
    <string name="schedule_date_time"><![CDATA[Schedule date & time]]></string>
    <string name="follow_class">Follow class</string>
    <string name="log_in">Log in</string>
    <string name="how_to_get_feedback_on_their_products_in_just_5_days">How to get feedback on their products in just 5 days</string>
</resources>