<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/tvTopCourseDetails"
            android:layout_width="133dp"
            android:layout_height="25dp"
            android:layout_marginStart="121dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="121dp"
            android:text="@string/course_details"
            android:textColor="@color/neutral_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="83dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTopCourseDetails"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/heart_outline" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="343dp"
            android:layout_height="230dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTopCourseDetails" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="343dp"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/step_design_sprint_for_beginner"
            android:textColor="@color/neutral_gray"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoView"
            app:lineHeight="33.6dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="55dp"
            android:layout_height="19dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="304dp"
            android:background="@drawable/detail_form_1"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:paddingEnd="4dp"
            android:paddingBottom="2dp"
            android:text="@string/_6_lessons"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="43dp"
            android:layout_height="19dp"
            android:layout_marginStart="79dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="253dp"
            android:background="@drawable/detail_form_2"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:paddingEnd="4dp"
            android:paddingBottom="2dp"
            android:text="@string/design"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="30dp"
            android:layout_height="19dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="215dp"
            android:background="@drawable/detail_form_3"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:paddingEnd="4dp"
            android:paddingBottom="2dp"
            android:text="@string/free"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="343dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="16dp"
            android:text="@string/in_this_course_i_ll_show_the_step_by_step_day_by_day_process_to_build_better_products_just_as_google_slack_klm_and_manu_other_do"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="334dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:srcCompat="@drawable/avatar_2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="104dp"
            android:layout_height="40dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="199dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="104dp"
                android:layout_height="24dp"
                android:text="@string/laurel_seilha"
                android:textColor="@color/neutral_gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="87dp"
                android:layout_height="15dp"
                android:text="@string/product_designer"
                android:textColor="@color/grey"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="301dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="62dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:srcCompat="@drawable/stopwatch" />

        <TextView
            android:id="@+id/editTextTime"
            android:layout_width="36dp"
            android:layout_height="15dp"
            android:layout_marginStart="323dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/btFreeEbook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="273dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/button"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:paddingEnd="12dp"
            android:paddingBottom="4dp"
            android:text="@string/free_e_book"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="612dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/message_search_back"
            app:layout_constraintBottom_toTopOf="@+id/detailButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pay_button"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="304dp"
                android:background="@drawable/play_button_back"
                android:src="@drawable/play_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHeadPlay"
                android:layout_width="0dp"
                android:layout_height="42dp"

                android:layout_marginStart="91dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="33dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/how_to_get_feedback_on_their_products_in_just_5_days"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="47dp"
                android:layout_height="21dp"
                android:layout_marginStart="91dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="04:10m"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeadPlay" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/detailButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="696dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/detail_button"
            android:clickable="true"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/follow_class"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>