<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.schedule.ScheduleFragment">


    <TextView
        android:id="@+id/scheduleHead"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/available_time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:textColor="@color/grey_1"/>

    <TextView
        android:id="@+id/scheduleTextUnderHead"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="73dp"
        android:text="@string/adjust_to_your_schedule"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/neutral_gray_2"
        />

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/rvSchedule"-->
<!--        android:layout_width="176dp"-->
<!--        android:layout_height="155dp"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="129dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:listitem="@layout/schedule_item"/>-->

    <LinearLayout
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:background="@drawable/calendar_back"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp">

        <ImageView
            android:id="@+id/calendar"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:src="@drawable/calendar" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="308dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/grey_1"
        android:textSize="14sp"/>


    <Button
        android:id="@+id/btnSch1"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="129dp"
        android:background="@drawable/schedule_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSch2"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="129dp"
        android:background="@drawable/schedule_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSch3"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="129dp"
        android:background="@drawable/schedule_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSch4"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="186dp"
        android:background="@drawable/schedule_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSch5"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="186dp"
        android:background="@drawable/schedule_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSch6"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="186dp"
        android:background="@drawable/schedule_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSch7"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="243dp"
        android:background="@drawable/schedule_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSch8"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="243dp"
        android:background="@drawable/schedule_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSch9"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="243dp"
        android:background="@drawable/schedule_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/etEmailSchedule"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="333dp"
        android:background="@drawable/message_search_back"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVie"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="405dp"
        android:text="@string/telp_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/grey_1"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etTelpNumberSchedule"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="430dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/message_search_back"
        />

    <TextView
        android:id="@+id/textViee"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="502dp"
        android:text="@string/schedule_date_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/grey_1"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="531dp"
        android:text="12 October, 2020 at 09.45 AM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/grey_3"
        android:fontFamily="@font/poppins_light"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="587dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/detail_button"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>